Changelog
=========

3.5.0 (unreleased)
==================

- Added methods to prenotazioni_context_state,
  some of them moved from conflict manager.
  [ale-rt]


3.4.1 (2014-06-23)
==================

- Fix encoding problem.
  [ale-rt]

3.4.0 (2014-06-17)
==================

- jslinting
- Fix unquoted parenthesis in searchable text searchs
- Added staff_notes field in prenotazione
- Prenotazione view also displays mobile number
  [ale-rt]

3.3.0 (2014-06-04)
==================

- Added view rg.prenotazioni.dateinput.conf.js
- BUGFIX: slot comparison was not taking into account the context
- Use calendar popup when booking vacations
- Search bookings by review state and on gate
- Use calendar popup from jquery tools for inputs with class rg-dateinput
- Upgrade step to reindex Subject index
- Added rg.prenotazioni.booking_review_states vocabulary
- Booking Subject field is now filled with the gate
- Added portal state view for prenotazioni
- Added an attribute on the week view to control who can access
  prenotazioni_search view
  (by default the user who can edit the prenotazioni folder)
- Use wildcars to identify holidays
- Get_day_intervals returns also the break as a slot
- Fix booking allowed during the lunch break
- Add a title with an indication of the booking time for anonymous booking links
  [ale-rt]

3.2.1 (2014-05-12)
==================

- Don't check for roles if user is anonymous
  [ale-rt]

3.2.0 (2014-05-12)
==================

- If a user can edit the Prenotazioni folder has the rights to manage the
  agenda
- If a user has the "Reader" role has the rights to inspect Prenotazione
  objects
  [ale-rt]

3.1.1 (2014-05-12)
==================

- Method user_can_manage was called on view instead of week_view
  [ale-rt]


3.1.0 (2014-05-06)
==================

- Handle the reader role in prenotazioni_week_view.
  [ale-rt]


3.0.0 (2014-05-05)
==================

Features:

- Completely redesigned UI: now we have completely different experiences for