@@ -80,6 +80,51 @@ class PrenotazioniContextState(BrowserView):
 
     @property
     @memoize
+    def user_permissions(self):
+        ''' The dict with the user permissions
+        '''
+        return api.user.get_permissions(obj=self.context)
+
+    @property
+    @memoize
+    def user_roles(self):
+        ''' The dict with the user permissions
+        '''
+        return api.user.get_roles(obj=self.context)
+
+    @property
+    @memoize
+    def user_can_manage(self):
+        ''' States if the authenticated user can manage this context
+        '''
+        if self.is_anonymous:
+            return False
+        if self.user_permissions.get('Modify portal content', False):
+            return True
+        return False
+
+    @property
+    @memoize
+    def user_can_view(self):
+        ''' States if the authenticated user can manage this context
+        '''
+        if self.is_anonymous:
+            return False
+        if self.user_can_manage:
+            return True
+        if u'Reader' in self.user_roles:
+            return True
+        return False
+
+    @property
+    @memoize
+    def user_can_search(self):
+        ''' States if the user can see the search button
+        '''
+        return self.user_can_manage
+
+    @property
+    @memoize
     def booker(self):
         '''
         Return the conflict manager for this context
